[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astra-agent"
version = "0.1.0"
description = "Autonomous Skill Training & Reflection Agent (ASTRA) — A self-improving AI agent that autonomously learns new skills, reflects, and builds a persistent library."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Jitin Kumar Sengar", email = "devxjitin@gmail.com"}
]
keywords = [
    "ai-agent", "autonomous-agent", "agentic-ai", "autonomous-learning",
    "self-learning", "skill-acquisition", "skill-library", "knowledge-management",
    "reflective-agent", "memory-system", "lifelong-learning", "adaptive-agent",
    "reasoning-agent", "research-agent", "autonomous-research", "continuous-learning",
    "ai-automation", "knowledge-engine", "experience-based-learning", "intelligent-agent"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/devxjitin/ASTRA"
Repository = "https://github.com/devxjitin/ASTRA"
Issues = "https://github.com/devxjitin/ASTRA/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["astra*"]

[tool.setuptools.package-data]
astra = ["py.typed"]
